feat: create test testMarcheurArriveToujoursADestination